--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 sphinx-intl==0.9.11
-transifex-client==0.13.3
-sphinx-rtd-theme==0.3.1
+transifex-client==0.13.5
+sphinx-rtd-theme==0.4.2
 -e git+https://github.com/rtfd/recommonmark.git@450909bdcf4c5eafde7c89696006530ba7cc78de#egg=recommonmark
 -e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8d0d2bb00742b25707866b0f7a2b6c0c35948c5e#egg=sphinxcontrib_jsonschema
 -e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib_opendataservices
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@44e37b3c27b2143e9e24166677cb18c066a316db#egg=standard_theme
+urllib3==1.24.1
+requests==2.21.0
 ## The following requirements were added by pip freeze:
-alabaster==0.7.10
+alabaster==0.7.12
 Babel==2.6.0
-certifi==2018.4.16
+certifi==2018.11.29
 chardet==3.0.4
-click==6.7
-CommonMark==0.7.5
+Click==7.0
+commonmark==0.8.1
 docutils==0.14
-future==0.16.0
-idna==2.6
-imagesize==1.0.0
+future==0.17.1
+idna==2.8
+imagesize==1.1.0
 Jinja2==2.10
 jsonpointer==2.0
-jsonref==0.1
-MarkupSafe==1.0
-packaging==17.1
-Pygments==2.2.0
-pyparsing==2.2.0
-python-slugify==1.2.5
-pytz==2018.4
-requests==2.18.4
-six==1.11.0
+jsonref==0.2
+MarkupSafe==1.1.0
+packaging==19.0
+Pygments==2.3.1
+pyparsing==2.3.1
+python-slugify==1.2.6
+pytz==2018.9
+six==1.12.0
 snowballstemmer==1.2.1
 Sphinx==1.7.5
-sphinxcontrib-websupport==1.0.1
-Unidecode==1.0.22
-urllib3==1.22
+sphinxcontrib-websupport==1.1.0
+Unidecode==1.0.23
