Update requirements versions (for security fixes to urllib3 and requests)

--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,10 @@ sphinx==1.7.5
 sphinx-intl
 transifex-client
 sphinx_rtd_theme
+CommonMark==0.7.5
 -e git+https://github.com/rtfd/recommonmark.git@450909bdcf4c5eafde7c89696006530ba7cc78de#egg=recommonmark
 -e git+https://github.com/OpenDataServices/sphinxcontrib-jsonschema.git@8d0d2bb00742b25707866b0f7a2b6c0c35948c5e#egg=sphinxcontrib-jsonschema
 -e git+https://github.com/OpenDataServices/sphinxcontrib-opendataservices.git@fab0ff0167d32ec243d42f272e0e50766299c078#egg=sphinxcontrib-opendataservices
 -e git+https://github.com/openownership/data-standard-sphinx-theme.git@44e37b3c27b2143e9e24166677cb18c066a316db#egg=standard_theme
+urllib3>=1.23
+requests>=2.21.0
